--- a/case-studies.html
+++ b/case-studies.html
@@ -18,12 +18,12 @@
     <a href="index.html"> <img id="logo" src="logo.png"></a>
         <div id="navbar">
             <ul>
-                <li><a href="#services">Expertise</a></li>        
-                <li><a href="#about">About</a></li>      
-                <li><a href="#news">News</a></li>
+                <li><a href="index.html#services">Expertise</a></li>        
+                <li><a href="index.html#about">About</a></li>      
+                <li><a href="index.html#news">News</a></li>
                 <li><a href="case-studies.html">Case studies</a></li>
             <!-- <li><a href="#testimonials">Testimonials</a></li> -->
-                <li><a href="#contact">Contact</a></li>  
+                <li><a href="index.html#contact">Contact</a></li>  
             </ul>
             </div>
 </header>
