--- a/case-studies.html
+++ b/case-studies.html
@@ -18,7 +18,8 @@
     <a href="index.html"> <img id="logo" src="logo.png"></a>
         <div id="navbar">
             <ul>
-                <li><a href="index.html#services">Expertise</a></li>        
+                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html#expertise">Expertise</a></li>              
                 <li><a href="index.html#about">About</a></li>      
                 <li><a href="index.html#news">News</a></li>
                 <li><a href="case-studies.html">Case studies</a></li>
