--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     <a href="index.html"> <img id="logo" src="logo.png"></a>
         <div id="navbar">
             <ul>
-                <li><a href="#services">Expertise</a></li>        
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#expertise">Expertise</a></li>              
                 <li><a href="#about">About</a></li>      
                 <li><a href="#news">News</a></li>
                 <li><a href="case-studies.html">Case studies</a></li>
@@ -30,7 +31,7 @@
 
 <body>
     <main>
-        <section id="services">
+        <section id="expertise">
             <p>Helen Grzyb and Associates is a unique consultancy offering both individual and organisational services. Our services are built on our substantial knowledge about communities and government.</p>
             
             <h1>Expertise</h1>
