navbar made sticky, links fixed, navbar moved to body

--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
 
 <header>
     <a href="index.html"> <img id="logo" src="logo.png"></a>
-        <div id="navbar">
+        
+</header>
+
+<body>
+    <div id="navbar" class="sticky">
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="#expertise">Expertise</a></li>              
@@ -27,9 +31,6 @@
                 <li><a href="#contact">Contact</a></li>  
             </ul>
             </div>
-</header>
-
-<body>
     <main>
         <section id="expertise">
             <p>Helen Grzyb and Associates is a unique consultancy offering both individual and organisational services. Our services are built on our substantial knowledge about communities and government.</p>
@@ -328,7 +329,7 @@
 
         <div class="jumbotron" id="contact">
                 <h2>Ready to get in touch?</h2><br>
-                <a href="mailto:helen@helengrzyb.com.au" class="btn btn-primary">contact@helengrzyb.com.au</a><br> 
+                <a href="mailto:contact@helengrzyb.com.au" class="btn btn-primary">contact@helengrzyb.com.au</a><br> 
             </div>
 
 </main>    
