--- a/case-studies.html
+++ b/case-studies.html
@@ -16,7 +16,12 @@
 
 <header>
     <a href="index.html"> <img id="logo" src="logo.png"></a>
-        <div id="navbar">
+        
+</header>
+
+
+<body>
+    <div id="navbar" class="sticky">
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="index.html#expertise">Expertise</a></li>              
@@ -27,10 +32,6 @@
                 <li><a href="index.html#contact">Contact</a></li>  
             </ul>
             </div>
-</header>
-
-
-<body>
     <section>
         <h3>Case studies</h3>
 
