enable reporting section

--- a/index.html
+++ b/index.html
@@ -61,7 +61,6 @@
                 <p> As executive coach, Helen has a very effective approach in gaining people’s trust, teasing out barriers to adoption of change and new approaches, and is experienced in coaching for individuals in both government and not for profit organisations.</p>
             </div>
         </section>
-<!-- 
         <section>
             <h3><strong>Reporting</strong></h3>
         
@@ -126,7 +125,7 @@
                 <li>AIH Review of Respite Care, 1992</li>
                 <li>Commonwealth/State Disability Agreement Working Party Report, 1992</li>
             </ul>
-        </section> -->
+        </section> 
 
         <section id="about">
         <h1>About</h1>
