--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
 </header>
 
 <body>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
+	
     <div id="navbar" class="sticky">
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -179,7 +184,7 @@
 
          <img class="alignnone size-full wp-image-258" src="https://helengrzyb.files.wordpress.com/2017/04/unnamed.jpg" alt="unnamed" width="211" height="56" /><img class="alignnone size-full wp-image-257" src="https://helengrzyb.files.wordpress.com/2017/04/accredited-professional.jpg" alt="accredited professional" width="172" height="56" />
     </section>
-<!-- 
+
         <section> 
             <h2>Previous clients</h2>
 
@@ -305,7 +310,7 @@
                 <li>West Coast TAFE</li>
                 <li>Yanndina Inc</li>
             </ul>             
-        </section> -->
+        </section>
         <section id="news">
         <h2>News</h2>
 
@@ -334,8 +339,8 @@
 </main>    
 <footer>
     <ul class="list-inline">
-      <li class="list-inline-item"><a href="#"><i class="fab fa-facebook"></i></a></li>
-      <li class="list-inline-item"><a href="#"><i class="fab fa-linkedin"></i></a></li>
+      <li class="list-inline-item"><a href="https://www.facebook.com"><i class="fab fa-facebook"></i></a></li>
+      <li class="list-inline-item"><a href="https://www.linkedin.com/in/helengrzyb/"><i class="fab fa-linkedin"></i></a></li>
     </ul>
 </footer>
 </body>
