--- a/index.html
+++ b/index.html
@@ -217,52 +217,31 @@
                 <li>Department of Finance, Funding and Contracting Services Unit</li>
                 <li>Department of Housing and Works</li>
                 <li>Department of Industry and Resources</li>
-            </ul>
-            <ul>
-                <li>Department of Justice
-            <ul>
+                <li>Department of Justice</li>
                 <li>Office of the Public Advocate,</li>
                 <li>Corporate Services,</li>
                 <li>Family Court,</li>
                 <li>Office of the Chief Justice, and</li>
                 <li>Aboriginal Alternative Dispute Resolution Office</li>
-            </ul>
-            </li>
-            </ul>
-            <ul>
                 <li>Department of Land Information</li>
-                <li>Department of the Premier and Cabinet
-            <ul>
+                <li>Department of the Premier and Cabinet</li>
                 <li>Office of Development Approvals Coordination,</li>
                 <li>Workforce Development,</li>
                 <li>Public Sector Management, and</li>
                 <li>Office of Citizens and Civics</li>
-            </ul>
-            </li>
                 <li>DADAA (WA) Inc</li>
                 <li>Disability Services Commission</li>
-            </ul>
-            <ul>
                 <li>Curriculum Council of Western Australia</li>
-            </ul>
-            <ul>
-                <li>Curtin University
-            <ul>
+                <li>Curtin University</li>
                 <li>Graduate School of Business,</li>
                 <li>Entrepreneurship Unit,</li>
                 <li>Curtin Consultancy Service, and</li>
                 <li>Small Business Unit</li>
-            </ul>
-            </li>
-            </ul>
-            <ul>
                 <li>Data Analysis Australia</li>
                 <li>East Perth Redevelopment Authority</li>
                 <li>Economic Consulting Services</li>
                 <li>Environs Consulting</li>
                 <li>Grower Group Alliance Inc</li>
-            </ul>
-            <ul>
                 <li>General Practitioner Network of WA Inc</li>
                 <li>Health Department of W.A.</li>
                 <li>IIR Conferences</li>
@@ -279,23 +258,15 @@
                 <li>People with Disabilities (WA) Inc</li>
                 <li>People Who Care Inc</li>
                 <li>Phoenix International Language Academy</li>
-            </ul>
-            <ul>
                 <li>PPK Environment and Infrastructure</li>
-            </ul>
-            <ul>
                 <li>Police and Citizen's Youth Clubs</li>
                 <li>Public Sector Management Program (Federal Government)</li>
                 <li>Regional Plantation Committees of WA and Agriculture Forestry and Fisheries Australia</li>
                 <li>Rocky Bay Inc</li>
                 <li>Small Business Development Corporation</li>
-            </ul>
-            <ul>
                 <li>Social Systems and Evaluation</li>
                 <li>Spowers Architects</li>
                 <li>St Mary's Anglican Girls' School</li>
-            </ul>
-            <ul>
                 <li>Swan Catchment Council</li>
                 <li>The Aged Persons Support Service Inc</li>
                 <li>The Aged Care Standards and Accreditation Agency</li>
