--- a/index.html
+++ b/index.html
@@ -24,17 +24,21 @@
       <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 	
-    <div id="navbar" class="sticky">
+     <div id="navbar" class="sticky">
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#expertise">Expertise</a></li>              
-                <li><a href="#about">About</a></li>      
-                <li><a href="#news">News</a></li>
+                <li><a href="index.html#expertise">Expertise</a></li>              
+                <li><a href="index.html#about">About</a></li>      
+                <li><a href="index.html#news">News</a></li>
                 <li><a href="case-studies.html">Case studies</a></li>
             <!-- <li><a href="#testimonials">Testimonials</a></li> -->
-                <li><a href="#contact">Contact</a></li>  
+                <li><a href="index.html#contact">Contact</a></li> 
+                <li class="navbar-contact"><a href="mailto:contact@helengrzyb.com.au"><i class="far fa-envelope"></i></li></a>
+                <li class="navbar-call"><a href="tel:0411722613‬"><i class="fas fa-phone"></i></a></li> 
+
             </ul>
             </div>
+
     <main>
         <section id="expertise">
             <p>Helen Grzyb and Associates is a unique consultancy offering both individual and organisational services. Our services are built on our substantial knowledge about communities and government.</p>
