added cushyCMS classes to make components editable

--- a/case-studies.html
+++ b/case-studies.html
@@ -36,7 +36,7 @@
             </div>
 
 <div class="accordion" id="accordionExample">
-  <div class="card">
+  <div class="card" class="cushycms">
     <div class="card-header" id="headingOne">
       <h2 class="mb-0">
         <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
@@ -64,7 +64,7 @@
         <p>Helen is sought after to share her expertise in organisations such as IAP2 (she is a member) and ISCA (also a member).</p>  
     </div>
   </div>
-  <div class="card">
+  <div class="card" class="cushycms">
     <div class="card-header" id="headingTwo">
       <h2 class="mb-0">
         <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
@@ -108,7 +108,7 @@
       </div>
     </div>
   </div>
-  <div class="card">
+  <div class="card" class="cushycms"> 
     <div class="card-header" id="headingThree">
       <h2 class="mb-0">
         <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
@@ -127,7 +127,7 @@
        </div>
     </div>
   </div>
-    <div class="card">
+    <div class="card" class="cushycms">
     <div class="card-header" id="headingFour">
       <h2 class="mb-0">
         <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">Baptistcare 2012</button>
@@ -145,7 +145,7 @@
 </div>
 </body>
 
-<footer>
+<footer class="cushycms">
     <ul class="list-inline">
       <li class="list-inline-item"><a href="https://www.linkedin.com/in/helengrzyb/"><i class="fab fa-linkedin"></i></a></li>
     </ul>
