removed cushycms class from footer.

--- a/case-studies.html
+++ b/case-studies.html
@@ -145,7 +145,7 @@
 </div>
 </body>
 
-<footer class="cushycms">
+<footer>
     <ul class="list-inline">
       <li class="list-inline-item"><a href="https://www.linkedin.com/in/helengrzyb/"><i class="fab fa-linkedin"></i></a></li>
     </ul>
