--- a/index.html
+++ b/index.html
@@ -305,13 +305,13 @@
             <li>Approved provider for the supply of policy and research services: Commissioner for Children and Young People.</li>
         </section>
 
-        <div class="jumbotron" id="contact" class="cushycms">
+        <div class="jumbotron" id="contact">
                 <h2>Ready to get in touch?</h2><br>
                 <a href="mailto:contact@helengrzyb.com.au" class="btn btn-primary">contact@helengrzyb.com.au</a><br> 
             </div>
 
 </main>    
-<footer class="cushycms">
+<footer>
     <ul class="list-inline">
       <li class="list-inline-item"><a href="https://www.linkedin.com/in/helengrzyb/"><i class="fab fa-linkedin"></i></a></li>
     </ul>
