--- a/case-studies.html
+++ b/case-studies.html
@@ -36,9 +36,9 @@
             </div>
 
 <div class="accordion" id="accordionExample">
-  <div class="card" class="cushycms">
+  <div class="card">
     <div class="card-header" id="headingOne">
-      <h2 class="mb-0">
+      <h2 class="mb-0" class="cushycms">
         <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
           Main Roads Western Australia (MRWA) 2006 – stakeholder engagement
         </button>
@@ -46,7 +46,7 @@
     </div>
 
     <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
-      <div class="card-body">
+      <div class="card-body" class="cushycms">
          <p>In 2006, Dr Helen Grzyb was part of the original MRWA Value Assurance Review team which tested the first Value Assurance Review (VAR) of MRWA stakeholder engagement. As a result of this work, Helen is an accredited MRWA VAR Reviewer. Subsequently Helen went on to undertake a further five reviews for MRWA projects:</p>
                 <ul>
                     <li>Albany Ring Road project</li>
@@ -64,19 +64,20 @@
         <p>Helen is sought after to share her expertise in organisations such as IAP2 (she is a member) and ISCA (also a member).</p>  
     </div>
   </div>
-  <div class="card" class="cushycms">
+  <div class="card">
     <div class="card-header" id="headingTwo">
-      <h2 class="mb-0">
+      <h2 class="mb-0" class="cushycms">
         <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
           Cossack 2006-7 – stakeholder engagement
         </button>
       </h2>
     </div>
     <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
-      <div class="card-body">
+      <div class="card-body" class="cushycms">
       <img class="card-img-top" src="img/cossack_house.jpg">
-                    <figcaption>Customs House & Bond Store, Cossack (1)</figcaption>
-                <h5 class="card-title">Cossack 2006-7 – stakeholder engagement</h5>
+      <div class="text-muted">Customs House & Bond Store, Cossack. Source: Michal Lewi - Own work, CC BY-SA 4.0, https://commons.wikimedia.org/w/index.php?curid=43737833</div>
+
+                <h5 class="card-title" class="cushycms">Cossack 2006-7 – stakeholder engagement</h5>
                 <h6>Project Background</h6>
             
                 <p>Established in 1863 at the mouth of the Harding River near Roebourne. Cossack was once a thriving community servicing the pastoral and pearling industries.</p>
@@ -103,21 +104,20 @@
                 <p>A draft masterplan was developed and released for comment late in 2006. Further feedback was sought from stakeholders and these comments informed the development of a masterplan which was presented to the Minister for Housing for his consideration.</p>
                 </div>
 
-                <div class="text-muted">(1) By Michal Lewi - Own work, CC BY-SA 4.0, https://commons.wikimedia.org/w/index.php?curid=43737833</div>
 
       </div>
     </div>
   </div>
-  <div class="card" class="cushycms"> 
+  <div class="card"> 
     <div class="card-header" id="headingThree">
-      <h2 class="mb-0">
+      <h2 class="mb-0" class="cushycms">
         <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
          Fremantle Heritage Precinct Master Plan
         </button>
       </h2>
     </div>
     <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
-        <div class="card-body">
+        <div class="card-body" class="cushycms">
             <p>Fremantle Prison Heritage Precinct is one of the most significant heritage sites in Australia.</p>
             <p>The development of the Fremantle Prison Heritage Precinct Master Plan presented many exciting opportunities to create an exceptional and viable experience. The success of the Fremantle Prison as a unique heritage precinct is to a large degree reliant on capturing the attention and imagination of visitors. The opportunity now exist to emphasise its connection with the port and city of Fremantle and to provide economically viable and compatible utilisation of the buildings and spaces which make up the precinct.</p>       
             <p>The project was to develop a Master Plan which created a vision for the future, firmly anchored in the past, with practical implementation strategies for the present. Palassis Architects were appointed as the project leaders, with international expertise from tourism, heritage,and marketing included in the multi-disciplinary project team.</p>
@@ -127,14 +127,14 @@
        </div>
     </div>
   </div>
-    <div class="card" class="cushycms">
+    <div class="card">
     <div class="card-header" id="headingFour">
-      <h2 class="mb-0">
+      <h2 class="mb-0" class="cushycms">
         <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">Baptistcare 2012</button>
       </h2>
     </div>
     <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordionExample">
-      <div class="card-body">
+      <div class="card-body" class="cushycms">
         <h5>Baptistcare 2012</h5>
         <p>In 2012, Helen Grzyb and Associates were appointed to undertake a review of Baptistcare’s contract with the Town of Brookton for management of the Kalkarni Aged Care facility.</p>
         <p>The work involved reviewing documentation including contracts and financial reports, undertaking workshops and meeting with key stakeholders of the residential aged care service as well as the adjacent medical service.</p>
