--- a/case-studies.html
+++ b/case-studies.html
@@ -20,21 +20,49 @@
       <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
-    <div id="navbar" class="sticky">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="index.html#expertise">Expertise</a></li>              
-                <li><a href="index.html#about">About</a></li>      
-                <li><a href="index.html#news">News</a></li>
-                <li><a href="case-studies.html">Case studies</a></li>
-            <!-- <li><a href="#testimonials">Testimonials</a></li> -->
-                <li><a href="index.html#contact">Contact</a></li> 
-                <li class="navbar-contact"><a href="mailto:contact@helengrzyb.com.au"><i class="far fa-envelope"></i></li></a>
-                <li class="navbar-call"><a href="tel:0411722613‬"><i class="fas fa-phone"></i></a></li> 
+<nav class="navbar sticky-top navbar-expand-sm navbar-dark bg-dark">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
-            </ul>
-            </div>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="index.html#about">About</a>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Expertise
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="#">Executive coaching</a>
+          <a class="dropdown-item" href="#">Strategic plans</a>
+          <a class="dropdown-item" href="#">Stakeholder engagement</a>
+          <a class="dropdown-item" href="#">Constitution review</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#">Something else here</a>
+        </div>
+      </li>
+        <li class="nav-item">
+        <a class="nav-link" href="case-studies.html">Case studies</a>
+      </li>
 
+      <li class="nav-item">
+        <a class="nav-link" href="index.html#news">News</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="index.html#contact">Contact</a>
+      </li>
+    </ul>
+   <!--  <form class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+    </form> -->
+  </div>
+</nav>
 <div class="accordion" id="accordionExample">
   <div class="card">
     <div class="card-header" id="headingOne">
