fixed navbar on case-studies

--- a/case-studies.html
+++ b/case-studies.html
@@ -25,29 +25,37 @@
     <span class="navbar-toggler-icon"></span>
   </button>
 
+  <nav class="navbar sticky-top navbar-expand-sm navbar-dark bg-dark">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
         <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="index.html#about">About</a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Expertise
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Executive coaching</a>
-          <a class="dropdown-item" href="#">Strategic plans</a>
-          <a class="dropdown-item" href="#">Stakeholder engagement</a>
-          <a class="dropdown-item" href="#">Constitution review</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a>
-        </div>
+          <a class="dropdown-item" href="index.html#strategic-plans">Strategic plans</a>
+          <a class="dropdown-item" href="index.html#exec-coaching">Executive coaching</a>
+          <a class="dropdown-item" href="index.html#reporting">Reporting</a>
+          <!-- <div class="dropdown-divider"></div> -->
+<!--           <a class="dropdown-item" href="#">Something else here</a>
+ -->        </div>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="index.html#about">About</a>
       </li>
         <li class="nav-item">
         <a class="nav-link" href="case-studies.html">Case studies</a>
+      </li>
+       </li>
+        <li class="nav-item">
+        <a class="nav-link" href="index.html#previous-clients">Previous clients</a>
       </li>
 
       <li class="nav-item">
@@ -57,21 +65,12 @@
         <a class="nav-link" href="index.html#contact">Contact</a>
       </li>
     </ul>
-   <!--  <form class="form-inline my-2 my-lg-0">
+  <!--   <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
     </form> -->
   </div>
 </nav>
-<div class="accordion" id="accordionExample">
-  <div class="card">
-    <div class="card-header" id="headingOne">
-      <h2 class="mb-0" class="cushycms">
-        <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-          Main Roads Western Australia (MRWA) 2006 – stakeholder engagement
-        </button>
-      </h2>
-    </div>
 
     <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
       <div class="card-body" class="cushycms">
