--- a/case-studies.html
+++ b/case-studies.html
@@ -25,11 +25,6 @@
     <span class="navbar-toggler-icon"></span>
   </button>
 
-  <nav class="navbar sticky-top navbar-expand-sm navbar-dark bg-dark">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
@@ -44,8 +39,8 @@
           <a class="dropdown-item" href="index.html#exec-coaching">Executive coaching</a>
           <a class="dropdown-item" href="index.html#reporting">Reporting</a>
           <!-- <div class="dropdown-divider"></div> -->
-<!--           <a class="dropdown-item" href="#">Something else here</a>
- -->        </div>
+          <!-- <a class="dropdown-item" href="#">Something else here</a> -->
+        </div>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="index.html#about">About</a>
@@ -130,8 +125,6 @@
                 
                 <p>A draft masterplan was developed and released for comment late in 2006. Further feedback was sought from stakeholders and these comments informed the development of a masterplan which was presented to the Minister for Housing for his consideration.</p>
                 </div>
-
-
       </div>
     </div>
   </div>
