--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     <li>social and economic studies</li>
                     <li>evaluations</li>
                 </ol>
-                <a href="case-studies.html"><button class="btn btn-info buttonspacing"> View case studies</button></a>
+                <a href="index.html#accordionExample"><button class="btn btn-info buttonspacing"> View case studies</button></a>
             </div>
 
             <div id="strategic-plans">
