added icons, cards, descriptions, removed case studies, repositioned intro text

--- a/index.html
+++ b/index.html
@@ -76,22 +76,79 @@
         <section class="cushycms">
             <p>Helen Grzyb and Associates is a unique consultancy offering both individual and organisational services. Our services are built on our substantial knowledge about communities and government.</p>
             
-            <h3><strong>Expertise</strong></h3>
             <div>
                 <h5><strong>Solutions</strong></h5>
                 <p>Helen Grzyb and Associates works with government and private sector organisations to achieve the maximum value possible from managing in an environment of change. 
             </div>  
 
-            <div>
-            <p>We are perfectly positioned to help your organisation develop and implement the strategies required to operate more effectively as customers and stakeholders become more demanding of results. We have expertise in undertaking:</p>
-                <ol>
-                    <li>program reviews</li>
-                    <li>policy/planning projects</li>
-                    <li>social and economic studies</li>
-                    <li>evaluations</li>
-                </ol>
-                <a href="index.html#accordionExample"><button class="btn btn-info buttonspacing"> View case studies</button></a>
-            </div>
+<p>We are perfectly positioned to help your organisation develop and implement the strategies required to operate more effectively as customers and stakeholders become more demanding of results. We have expertise in undertaking:</p>
+
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12 col-sm-6 col-md-3">
+         <div class="card">
+            <img src="img/target-1.svg" alt="website icon" width="100">
+            <h2>Program reviews</h2>
+            <p>Helen can conduct independent reviews of your programs with<strong> diverse frameworks and standards.</strong></p>
+            <a href="#">Learn more</a>
+        </div>
+    </div>
+    <div class="col-xs-12 col-sm-6 col-md-3">
+       <div class="card">
+            <img src="img/light-bulb.svg" alt="speech bubbles" width="100">
+            <h2>Strategic plans</h2>
+            <p>We develop strategic and business plans for not for profit organisations seeking to better position themselves for the future. </p>
+            <a href="#">Learn more</a>
+        </div>
+    </div>
+
+    <div class="col-xs-12 col-sm-6 col-md-3">
+       <div class="card">
+            <img src="img/teamwork-4.svg" alt="speech bubbles" width="100">
+            <h2>Stakeholder engagement</h2>
+            <p>Dr Helen Grzyb has substantial expertise as a professional presenter and is able to chunk down complex concepts into bite sized chunks, an important factor in sharing new information for serious consideration by stakeholders.</p>
+            <a href="#">Learn more</a>
+        </div>
+    </div>
+    <div class="col-xs-12 col-sm-6 col-md-3">
+       <div class="card">
+            <img src="img/megaphone.svg" alt="megaphone" width="100">
+            <h2>Marketing plans</h2>
+            <p>We work with you to develop a marketing strategy.</p>
+            <a href="#">Learn more</a>
+        </div>
+    </div>
+    <div class="col-xs-12 col-sm-6 col-md-3">
+       <div class="card">
+            <img src="img/briefing.svg" alt="document with pencil" width="100">
+            <h2>Constitution review</h2>
+            <p>Helen can review your <strong>non-profit's </strong>constitution so it retains currency in a changing environment.</p><a href="#">Learn more</a>
+        </div>
+    </div>
+    <div class="col-xs-12 col-sm-6 col-md-3">
+      <div class="card">
+            <img src="img/worldwide.svg" alt="earth icon" width="100">
+            <h2>Social and economic studies</h2>
+            <p>Helen has conducted analysis in the areas of tourism, economic and social impacts, timber plantations, chamber of commerce/local economic development, catchment management and conservation, main roads and infrastructure, residential aged care services, and services for communities including for children, people with a disability, and seniors.</p>
+            <a href="#">Learn more</a></p>
+        </div>  
+    </div>
+    <div class="col-xs-12 col-sm-6 col-md-3">
+       <div class="card">
+            <img src="img/presentation.svg" alt="speech bubbles" width="100">
+            <h2>Reporting</h2>
+            <p>We work with a range of individuals and businesses to provide a complete suite of research and analysis services. These include statistical analysts, economists, electronic survey experts, and others.</p><a href="#">Learn more</a></p>
+        </div>
+    </div>
+    <div class="col-xs-12 col-sm-6 col-md-3">
+       <div class="card">
+            <img src="img/shake-hands.svg" alt="speech bubbles" width="100">
+            <h2>Executive coaching</h2>
+            <p>As executive coach, Helen has a very effective approach in gaining people’s trust, teasing out barriers to adoption of change and new approaches, and is experienced in coaching for individuals in both government and not for profit organisations.</p><a href="#">Learn more</a></p>
+        </div>
+    </div>
+  </div>
+</div>
 
             <div id="strategic-plans">
                 <h5><strong>Strategic plans</strong></h5>
@@ -462,6 +519,8 @@
     <ul class="list-inline">
       <li class="list-inline-item"><a href="https://www.linkedin.com/in/helengrzyb/"><i class="fab fa-linkedin"></i></a></li>
     </ul>
+
+    <div>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/"     title="Flaticon">www.flaticon.com</a></div>
 </footer>
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
