added gateway picture and link

--- a/index.html
+++ b/index.html
@@ -74,6 +74,11 @@
 
     <main>
         <section class="cushycms">
+
+
+
+
+
             <p>Helen Grzyb and Associates is a unique consultancy offering both individual and organisational services. Our services are built on our substantial knowledge about communities and government.</p>
             
             <div>
@@ -486,7 +491,9 @@
   </div>
 </div>
 
+<a href="https://www.bgeeng.com/sc-traffic-design/40-market-sectors/ms-transport/mst-traffic-design/329-gateway-vision-wa?tmpl=component"><img src="img/gateway.jpg"></a>
 
+<p>Gateway source ; https://www.bgeeng.com/sc-traffic-design/40-market-sectors/ms-transport/mst-traffic-design/329-gateway-vision-wa?tmpl=component </p>
 
         <section id="news" class="cushycms">
         <h3>News</h3>
