melville image added

--- a/index.html
+++ b/index.html
@@ -386,6 +386,8 @@
             </ul>
 
             <p>Helen has since been sought after to undertake stakeholder enagement reviews in the City of Melville and in 2019 for the City of Nedlands.</p>
+            <a href="https://www.melvillecity.com.au/things-to-do/find-venues-parks-and-reserves/shirley-strickland-reserve"><img src="img/Shirely-Strickland-Reserve.jpg"></a>
+            <h6 class="text-muted">Image source: https://www.melvillecity.com.au/things-to-do/find-venues-parks-and-reserves/shirley-strickland-reserve</h6>
 
          </div>
       </div>
@@ -467,8 +469,6 @@
         <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordionExample">
           <div class="card-body">
               
-                <h5>Baptistcare 2012</h5>
-
                 <p>In 2012, Helen Grzyb and Associates were appointed to undertake a review of Baptistcare's contract with the Town of Brookton for management of the Kalkarni Aged Care facility.</p>
 
                 <p>The work involved reviewing documentation including contracts and financial reports, undertaking workshops and meeting with key stakeholders of the residential aged care service as well as the adjacent medical service.</p>
