changed landing cards,

--- a/index.html
+++ b/index.html
@@ -33,16 +33,10 @@
           <li class="nav-item active">
             <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
           </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Expertise
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="index.html#reporting">Reporting</a>
-              <!-- <div class="dropdown-divider"></div> -->
-              <!-- <a class="dropdown-item" href="#">Something else here</a> -->
-            </div>
+           <li class="nav-item">
+            <a class="nav-link" href="index.html#about">Expertise</a>
           </li>
+
           <li class="nav-item">
             <a class="nav-link" href="index.html#about">About</a>
           </li>
@@ -73,9 +67,9 @@
     </nav>
 
     <main>
-        <section class="cushycms">
+        <section>
 
-            <div>
+            <div class="cushycms">
                 <h5><strong>Solutions</strong></h5>
                 <p>Helen Grzyb and Associates is a unique consultancy offering sustainable solutions to community and government organisations since 1997.</p>    
 
@@ -99,8 +93,7 @@
                      <div class="card">
                         <img src="img/target-1.svg" alt="website icon" width="100">
                         <h2>Research and policy review</h2>
-                        <p>Helen can conduct independent reviews of your programs with<strong> diverse frameworks and standards.</strong></p>
-                        <a href="#">Learn more</a>
+                        <p>Helen can conduct independent reviews of your programs with<strong> diverse frameworks and standards.</strong> We work with expert colleagues to collectively provide a complete suite of research and analysis services.</p>
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-md-3">
@@ -108,7 +101,6 @@
                         <img src="img/light-bulb.svg" alt="speech bubbles" width="100">
                         <h2>Strategic planning</h2>
                         <p>We develop strategic and business plans for not for profit organisations seeking to better position themselves for the future. </p>
-                        <a href="#">Learn more</a>
                     </div>
                 </div>
 
@@ -117,7 +109,6 @@
                         <img src="img/teamwork-4.svg" alt="speech bubbles" width="100">
                         <h2>Stakeholder engagement</h2>
                         <p>Dr Helen Grzyb has substantial expertise as a professional presenter and is able to chunk down complex concepts into bite sized chunks, an important factor in sharing new information for serious consideration by stakeholders.</p>
-                        <a href="#">Learn more</a>
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-md-3">
@@ -125,42 +116,40 @@
                         <img src="img/megaphone.svg" alt="megaphone" width="100">
                         <h2>Marketing plans</h2>
                         <p>We work with you to develop a marketing strategy.</p>
-                        <a href="#">Learn more</a>
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-md-3">
                    <div class="card">
                         <img src="img/briefing.svg" alt="document with pencil" width="100">
                         <h2>Constitution review</h2>
-                        <p>Helen can review your <strong>non-profit's </strong>constitution so it retains currency in a changing environment.</p><a href="#">Learn more</a>
+                        <p>Helen can review your <strong>non-profit's </strong>constitution so it retains currency in a changing environment.</p>
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-md-3">
                   <div class="card">
-                        <img src="img/worldwide.svg" alt="earth icon" width="100">
+                        <img src="img/working.svg" alt="earth icon" width="100">
                         <h2>Governance advisory</h2>
-                        <p>Helen has conducted analysis in the areas of tourism, economic and social impacts, timber plantations, chamber of commerce/local economic development, catchment management and conservation, main roads and infrastructure, residential aged care services, and services for communities including for children, people with a disability, and seniors.</p>
-                        <a href="#">Learn more</a></p>
+                        <p>We work with boards to optimise policies for the future, identify board skills and capacity requirements, manage risk, build sustainable plans and organisations.</p>
                     </div>  
                 </div>
                 <div class="col-xs-12 col-sm-6 col-md-3">
                    <div class="card">
                         <img src="img/presentation.svg" alt="speech bubbles" width="100">
                         <h2>Reporting</h2>
-                        <p>We work with a range of individuals and businesses to provide a complete suite of research and analysis services. These include statistical analysts, economists, electronic survey experts, and others.</p><a href="#">Learn more</a></p>
+                        <p></p>
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-md-3">
                    <div class="card">
                         <img src="img/shake-hands.svg" alt="speech bubbles" width="100">
                         <h2>Executive coaching</h2>
-                        <p>As executive coach, Helen has a very effective approach in gaining people’s trust, teasing out barriers to adoption of change and new approaches, and is experienced in coaching for individuals in both government and not for profit organisations.</p><a href="#">Learn more</a></p>
+                        <p>As executive coach, Helen has a very effective approach in gaining people's trust, teasing out barriers to adoption of change and new approaches, and is experienced in coaching people from government or not for profit organisations.</p>
                     </div>
                 </div>
               </div>
             </div>
 
-            <div>
+            <div id="expertise" class="cushycms">
                 <h5><strong>Strategic plans</strong></h5>
                 <p>We have delivered or been part of a multi disciplinary team for strategic plans in areas such as:</p>
 
@@ -173,9 +162,9 @@
                     <li>WA public sector operations (Justice, Health, Education)</li>
                 </ul>
             </div>
-            <br><br><br>
+            <br><br>
 
-            <div id="exec-coaching"></div>
+            <div class="cushycms"></div>
              
                 <h3>Research and policy review:</h3>
 
