moved about to separate page, updated navbar on pages

--- a/about.html
+++ b/about.html
@@ -1,62 +1,104 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Helen Grzyb & Associates</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+     <title>Helen Grzyb & Associates</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Source+Code+Pro:400,700' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400&display=swap" rel="stylesheet">
+     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
     <meta name="google-site-verification" content="wpJhZ22qKAdN4Yge35cSDtZ4FLtKsXFSBehh2rjQYcA" />
+
 </head>
 
 <header>
-        <a href="index.html"> <img id="logo" src="logo.png"></a>
-            <nav>
-                <!-- <a class="nav-link" href="index.html">Home</a> -->
-                <ul>
-                <li><a href="about.html">About</a></li>      
-                <li><a href="services.html">Service offerings</a></li>        
-                <li><a href="news.html">News</a></li>
-                <!-- <a class="nav-link" href="case-studies.html">Case studies</a> -->
-                <li><a href="testimonials.html">Testimonials</a></li>
-                <li><a href="contact.html">Contact</a></li>  
-
-                </ul>
-            </nav>
+    <a href="index.html"> <img id="logo" src="logo.png"></a>
 </header>
 
-<body>
-        <img class="alignnone size-full wp-image-258" src="https://helengrzyb.files.wordpress.com/2017/04/unnamed.jpg" alt="unnamed" width="399" height="90" /><img class="alignnone size-full wp-image-257" src="https://helengrzyb.files.wordpress.com/2017/04/accredited-professional.jpg" alt="accredited professional" width="276" height="96" />
+<body>  
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js" integrity="sha384-3ceskX3iaEnIogmQchP8opvBy3Mi7Ce34nWjpBIwVTHfGYWQS9jwHDVRnpKKHJg7" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.3.7/js/tether.min.js" integrity="sha384-XTs3FgkjiBgo8qjEjBk0tGmf3wPrWtA6coPfQDfFEY8AnYJwjalXCiosYRBIBZX8" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js" integrity="sha384-BLiI7JTZm+JWlgKa0M0kGRpJbF2J8q+qreVrKBC47e3K6BW78kGLrCkeRX6I9RoK" crossorigin="anonymous"></script>
 
-        Dr Helen Grzyb holds the following affiliations:
-        <ul>
-            <li>Infrastructure Sustainability Professional</li>
-            <li>Member of the Institute of Public Participation, Australasia</li>
-            <li>Fellow of the Australian Human Resources Institute</li>
-            <li>Fellow of the Australian Institute Of Management</li>
-            <li>Member of the Institute of Public Administration, Australia</li>
-            <li>Fellow of the Australian Institute of Company Directors</li>
-            <li>Member of the Australasian Evaluation Society</li>
-            <li>Member of the Australian Institute of Professional Facilitators</li>
+    <nav class="navbar sticky-top navbar-expand-sm navbar-dark bg-dark">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+          </li>
+           <li class="nav-item">
+            <a class="nav-link" href="index.html#about">Expertise</a>
+          </li>
+
+          <li class="nav-item active">
+            <a class="nav-link" href="about.html">About</a>
+          </li>
+            <li class="nav-item">
+            <a class="nav-link" href="index.html#accordionExample">Case studies</a>
+          </li>
+           </li>
+            <li class="nav-item">
+            <a class="nav-link" href="previous-clients.html">Previous clients</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="index.html#news">News</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="index.html#contact">Contact</a>
+          </li>
+              </ul>
+          <ul class="navbar-nav">
+            <li class="nav-item"><a class="nav-link" href="mailto:contact@helengrzyb.com.au"><i class="far fa-envelope"></i></li></a>
+          <li class="nav-item"><a class= "nav-link" href="tel:0411722613‬"><i class="fas fa-phone"></i></a></li>
         </ul>
+      <!--   <form class="form-inline my-2 my-lg-0">
+          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        </form> -->
+      </div>
+    </nav>
 
-        Ph.D, M. Comm.(HRD), Grad. Dip (HRD), FAHRI, FAIM, FAICD, MIPAA, MILP
+<main>
+          <div id="about">
+                <h3>About</h3>
 
-        <p>Winner of the Australian Institute of Management (WA) award for best masters student and the Bankwest scholarship for Advanced not for profit governance, Dr Grzyb is an accomplished researcher and strategist with over 30 years’ national track record in both government and not-profit sectors.</p>
-        <p>An accredited policy and research advisor and engagement expert by government agencies in Western Australia, she is a Fellow of the Australian Institute of Company Directors (and a graduate of the Company Director course), of the Australian Institute of Management, and of the Australian Human Resources Institute.</p>
-        <p>As the founding director of Helen Grzyb and Associates, Helen has assisted local and national organisations in devising answers to complex policy and governance questions in their pursuit of improving outcomes. </p>
-        <p>She trains and advises executives across private and public sectors on stakeholder engagement, governance and executive coaching. The biggest impact of her work has been successfully achieving stakeholder buy-in in significant projects.
-        <p>Prior to leading her independent consultancy business, Dr Grzyb was a senior government officer at the centre of the Western Australian government, advising on environmental, aboriginal affairs, disability services together with treasury and public sector management areas.</p>
-        <p>Helen has lectured extensively on undergraduate, postgraduate and executive courses in Australia, and her expertise has been recognised with invitations to present to senior staff in South East Asia, at national conferences and to national and Western Australian organisations.</p>
-        <p>A trained facilitator, Helen has been recognised for her ability to fully engage with participants in a creative learning environment.</p>
-        <p>As chief investigator of government-funded research projects, Dr Grzyb has led multidisciplinary teams in program evaluations, legislative review, policy and purchasing frameworks, strategic and business planning. These projects include the areas of tourism, economic and social impacts, timber plantations, chamber of commerce/local economic development, catchment management and conservation, main roads and infrastructure, residential aged care services, and services for communities including for children, people with a disability, and seniors.</p>
-        <p>Dr Grzyb has also contributed to multidisciplinary projects in the areas of heritage master planning, infrastructure planning, indigenous employment and health, secondary education institutions, and local government planning.</p>
-        <p>As a result of her decades of expertise and practice Helen is seen as an expert in economic and social studies, in community based organisations and their activities, in stakeholder engagement and governance processes and practice.</p>
-        <p>A strong advocate for education and economic empowerment, Dr Grzyb dedicates her time and expertise to the cause by mentoring new professionals.  She has spoken to graduates about business set up, entrepreneurship, and consultancy practice and is currently serving as a mentor for the Australian Human Resources Institute and Curtin’s NEXT STEP mentoring program.</p>
-        <p>Her passion in connecting businesses with philanthropic activities has seen her serving on the non-profit boards of incorporated organisations: Rosewood Care Group, The Aged Persons Support Service, Disability in the Arts, Disadvantage in the Arts, Australia (WA), Rocky Bay, Eastern Regional Business Enterprise and Arts Centre, Quadriplegic Centre, Meerilinga Incorporated and Presbyterian Ladies’ College.</p>
-        <p>She is currently a non-executive director of non-profit Advocare Incorporated.  Her substantial expertise in not for profit organisations saw her appointment to the Western Australian Charitable Institutions Advisory Committee, a role she has held for five years.</p>
-        <p>Helen’s fundamental belief in blending economic and community responses has seen her pro-bono work with professional and business organisations including the City of Subiaco Economic and Sustainable Business committee, the Chamber of Commerce and Industry WA’s Small and Medium Enterprise Council, and the Small Enterprise Association of Australia and New Zealand (WA).</p>
-        <p>Dr Grzyb is a member of the Australasian Evaluation Society, the Institute of Public Administration Australia, the Infrastructure Sustainability Council of Australia and the Institute of Professional Facilitators.  </p>
-        <p>Her published work includes research papers and reports on evaluation models, stakeholder engagement, small business (rural and metropolitan), community organisations, timber plantation industry, SME corporate responsibility.</p>            
-</section></body>
+                <p>Accredited by government agencies as an policy and research advisor and engagement expert in Western Australia, Dr Helen Grzyb is a Fellow of the Australian Institute of Company Directors (and a graduate of the Company Director course), of the Australian Institute of Management, and of the Australian Human Resources Institute.</p>
 
+                <p>Winner of the Australian Institute of Management (WA) award for best masters student and the Bankwest scholarship for Advanced not for profit governance, Helen is an accomplished researcher and strategist with over 30 years' national track record in both government and not-profit sectors.As the founding director of Helen Grzyb and Associates, she has assisted local and national organisations in devising answers to complex policy and governance questions in their pursuit of improving outcomes.The biggest impact of her work has been successfully achieving stakeholder buy-in in significant projects.</p>
+
+                <p>Prior to leading her independent consultancy business, Dr Grzyb was a senior government officer at the centre of the Western Australian government, advising on environmental, aboriginal affairs, disability services as well as treasury and public sector management.</p>
+
+                <p>Helen has lectured extensively on undergraduate, postgraduate and executive courses in Australia, and her expertise has been recognised with invitations to present to senior staff in South East Asia, at national conferences and to national and Western Australian organisations.</p>
+
+                <p>A strong advocate for education and economic empowerment, Dr Grzyb dedicates her time and expertise to the cause by mentoring new professionals. She talks to graduates about business set up, entrepreneurship, and consultancy practice; and served as a mentor for the Australian Human Resources Institute and Curtin's NEXT STEP mentoring program. She currrently mentors public servants through the Institute of Public Administration Australia (WA). Her expertise in governance and in vocational education in regional WA saw her appointed as Governing Councillor, South Regional TAFE in 2019.</p>
+
+                <p>A volunteer for almonst 30 years, Helen has served on the boards of incorporated organisations: Advocare, Rosewood Care Group, The Aged Persons Support Service, Disability in the Arts, Disadvantage in the Arts, Australia (WA), Rocky Bay, Eastern Regional Business Enterprise and Arts Centre, Quadriplegic Centre, Meerilinga Incorporated and Presbyterian Ladies' College. Helen's substantial expertise in this area saw her appointment to the Western Australian Charitable Institutions Advisory Committee, a role she has held for since 2012.</p>
+              
+                <p>Helen's pro-bono work with professional and business organisations including the City of Subiaco Economic and Sustainable Business committee, the Chamber of Commerce and Industry WA's Small and Medium Enterprise Council, and the Small Enterprise Association of Australia and New Zealand (WA).</p>
+            </div>
+
+            <div class="jumbotron" id="contact">
+                <h2>Ready to get in touch?</h2><br>
+                <a href="mailto:contact@helengrzyb.com.au" class="btn btn-primary">contact@helengrzyb.com.au</a><br> 
+            </div>
+            
+        </main> 
+
+        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
+       <footer>
+          <ul class="list-inline">
+            <li class="list-inline-item"><a href="https://www.linkedin.com/in/helengrzyb/"><i class="fab fa-linkedin"></i></a></li>
+          </ul>
+      </footer>
+    </body>
 </html>
